# DISLEXIA

./: Info.md  Literatur  README.md  index.html
Ausarbeitung/: main.md  main.typ
Server/: documentation.org  go.mod  main.go  users.db
login/: Cargo.toml  index.html
login/src/: main.rs
widgets/: index.html
widgets/homescreen/: homescreen.css  homescreen.html  homescreen.js
widgets/lecture/: lecture.css  lecture.html  lecture.js
widgets/login/: login.css  login.html
widgets/new_password/: new_password.css  new_password.html
widgets/register/: register.css  register.html
widgets/sidebar/: clients.html
